EB-2002-09-11-0  Bugfix:    schedd_job_info = true causes immense daemons
                            memory growth
                 IZ:        #374
                 Bugtraq:   #4742189
                 Review:    AH
                 Changed:   sge_schedd

EB-2002-09-10-0  Enhancem.: Initial Part of AIX 5.1 port
                 Review:    JG

CR-2002-09-10-1  Bugfix:    L10N - (setlocale() returns e.g. fr_FR on LINUX)
                            cutting of characters after "_" for building message
                            file directory path.

CR-2002-09-09-2  I18N:      invalid escape sequence in one of msgid
                 Bugtraq:   #4743505
                 Changed:   inst_sgeee usage output


AA-2002-09-05-0  I18N:      - Calculation failure in Functional policy
                            - Wrong mnemonic on qmon main window
                            - qmon dies with changes in Edit Tickets 
                              on Solaris64
                            - suspend_threshold in queue icon display nearly 
                              not visible
                 Bugtraq:   #4742082, #4729085, #4740335
                 IZ:        #350

EB-2002-09-04-0  Bugfix:    qmod help output is incomplete
                 Issue:     #354
                 Bugtraq:   #4741230
                 Review:    AH
                 Changed:   qmod

CR-2002-09-03-0  Testsuite: duplicate hostnames in configuration should be 
                            detected
                 Issue:     #300
                            also testing for duplicate architectures in
                            compile_source procedure.

AS-2002-09-02-0  Bugfix:    Insufficient checking for PTF_*_PRIORITY values
                 Issue:     #333
                 Bugtraq:   #4740407
                 Changed:   sge_execd

AH-2002-09-02-1  Doc:       qmod man page for "-r" incorrect (user)
                            daemons to crash at startup phase
                 Issue:     #193
