@@ -1195,7 +1195,7 @@ void set_default_options()
 
    /* determine architecture */
    architecture = getenv("ARCH");
-   if(architecture == NULL) {
+   if(architecture == NULL || strlen(architecture) == 0) {
       fprintf(stderr, "qmake: *** cannot determine architecture from environment variable ARCH\n");
       fprintf(stderr, "           no default architecture set\n");
       return;
@@ -1213,8 +1213,7 @@ void set_default_options()
       /* if no resource requests, insert to use same architecture */
       /* copy old sge options */
       argv = sge_argv;
-      sge_argv = (char **)malloc((sge_argc + 
-                                     (insert_resource_request ? 3 : 0)) * sizeof(char *));
+      sge_argv = (char **)malloc((sge_argc + (insert_resource_request ? 3 : 0)) * sizeof(char *));
 
       if(sge_argv == NULL) {
          remote_exit(EXIT_FAILURE, "malloc failed", strerror(errno));
@@ -1353,7 +1352,7 @@ static void equalize_pe_j()
    char **argv;
    static char buffer[100];
 
-   /* no -pe sge option set? */
+   /* -pe sge option set? Then take this one */
    for(i = 0; i < sge_argc; i++) {
       if(!strcmp(sge_argv[i], "-pe")) {
          return;
@@ -1374,33 +1373,35 @@ static void equalize_pe_j()
       }
    }
   
-   if(nslots > 1) {
-      if(be_verbose) {
-         fprintf(stderr, "inserting pe request to sge options: -pe make 1-%d\n", nslots);
-      }
-   
-      /* insert pe into sge options */
-      /* copy old sge options */
-      argv = sge_argv;
-      sge_argv = (char **)malloc((sge_argc + 3) * sizeof(char *));
-
-      if(sge_argv == NULL) {
-         remote_exit(EXIT_FAILURE, "malloc failed", strerror(errno));
-      }
-
-      for(i = 0; i < sge_argc; i++) {
-         sge_argv[i] = argv[i];
-      }
-   
-      /* append pe */
-      sprintf(buffer, "1-%d", nslots);
-      sge_argv[sge_argc++] = "-pe";
-      sge_argv[sge_argc++] = "make";
-      sge_argv[sge_argc++] = buffer;
-   
-      /* free old sge_argv */
-      free(argv);
+   if(nslots < 1) {
+      nslots = 1;
    }
+
+   if(be_verbose) {
+      fprintf(stderr, "inserting pe request to sge options: -pe make 1-%d\n", nslots);
+   }
+   
+   /* insert pe into sge options */
+   /* copy old sge options */
+   argv = sge_argv;
+   sge_argv = (char **)malloc((sge_argc + 3) * sizeof(char *));
+
+   if(sge_argv == NULL) {
+      remote_exit(EXIT_FAILURE, "malloc failed", strerror(errno));
+   }
+
+   for(i = 0; i < sge_argc; i++) {
+      sge_argv[i] = argv[i];
+   }
+
+   /* append pe */
+   sprintf(buffer, "1-%d", nslots);
+   sge_argv[sge_argc++] = "-pe";
+   sge_argv[sge_argc++] = "make";
+   sge_argv[sge_argc++] = buffer;
+
+   /* free old sge_argv */
+   free(argv);
 }
 
 
