@@ -1,3 +1,12 @@
+JG-2002-09-12-0  Bugfix:    qmake without information about parallel execution
+                            on commandline failed.
+                            qmake made an incorrect resource request if the
+                            ARCH environment variable was an empty string.
+                 IZ:        #335, #327
+                 Bugtraq:   #4745399, 4745404
+                 Changed:   qmake
+
+
 EB-2002-09-11-0  Bugfix:    schedd_job_info = true causes immense daemons
                             memory growth
                  IZ:        #374
